# deepin-scanner-up

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md
cmake/: translation-generate.cmake
debian/: changelog  control  copyright  deepin-scanner.1  manpages  rules
resources/: deepin-scanner.desktop  resources.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  scannerdevice.cpp  scannerdevice.h  webcamdevice.cpp  webcamdevice.h
src/device/: devicebase.cpp  devicebase.h  scannerdevice.cpp  scannerdevice.h  webcamdevice.cpp  webcamdevice.h
src/libofd/: CMakeLists.txt  LICENSE  README.md
src/libofd/cmake/: FindQuaZip5.cmake
src/libofd/examples/: CMakeLists.txt  simple_example.cpp
src/libofd/include/ofd/: ofd_reader.h  ofd_writer.h
src/libofd/src/: ofd_reader.cpp  ofd_writer.cpp
src/ui/: scannerswidget.cpp  scannerswidget.h  scanwidget.cpp  scanwidget.h  scanwindow.cpp  scanwindow.h
tests/: CMakeLists.txt  test_shared_ptr.cpp
translations/: deepin-scanner.ts  deepin-scanner_en_US.ts  deepin-scanner_zh_CN.ts  deepin-scanner_zh_HK.ts  deepin-scanner_zh_TW.ts
